<resources>
    <string name="app_name">GameChat</string>
    <string name="arrow_left"><![CDATA[<]]></string>
    <string name="arrow_right"><![CDATA[>]]></string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="chat">Chat</string>
    <string name="choose_group">Choose a Group:</string>
    <string name="choose_user">Choose a User:</string>
    <string name="choice_text">or</string>
    <string name="desc_gamechat_logo">GameChat logo</string>
    <string name="desc_sign_in_title_text">GameChat sigin in text</string>
    <string name="disconnect">Disconnect</string>
    <string name="down_black_arrow">\u25bc</string>
    <string name="email_fmt">Email: %s</string>
    <string name="emailpassword_status_fmt">Email User: %s</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="game">Game</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="id_fmt">User ID: %s</string>
    <string name="intro_chat_message">Public private secure messaging with any Google user</string>
    <string name="intro_chat_title">Chat</string>
    <string name="intro_game_message">Play popular well known games with other GameChat users or against the computer</string>
    <string name="intro_game_title">Game</string>
    <string name="intro_home_message">Chat and play games with friends and family</string>
    <string name="intro_home_title">GameChat</string>
    <string name="intro_levels_message">Relaxed games for teaching and learning as well as competiitve levels for serious players</string>
    <string name="intro_levels_title">Levels</string>
    <string name="intro_page_circle">\u25CF</string>
    <string name="invite_new_user">Invite a New User!</string>
    <string name="loading">Loading…</string>
    <string name="manage_accounts">Manage Accounts</string>
    <string name="members">Members</string>
    <string name="nav_header_label_android_studio">Android Studio</string>
    <string name="nav_header_label_android_studio_android_com">android.studio@android.com</string>
    <string name="navigation_drawer_action_close">Close navigation drawer</string>
    <string name="navigation_drawer_action_open">Open navigation drawer</string>
    <string name="navigation_drawer_label_favorite_chat">Favorite Chat</string>
    <string name="navigation_drawer_label_favorite_chats">Favorite Chats</string>
    <string name="navigation_drawer_label_problems_feedback">Help and Feedback</string>
    <string name="navigation_drawer_label_problems_learn">Learn More</string>
    <string name="navigation_drawer_label_problems_settings">Settings</string>
    <string name="navigation_drawer_label_recent_chat">Recent Chat</string>
    <string name="navigation_drawer_label_recent_chats">Recent Chats</string>
    <string name="new_chat_favorite_room">New Chat (Favorite Room)</string>
    <string name="new_chat_select_user">New Chat (Select User)</string>
    <string name="new_game">New Game</string>
    <string name="new_game_checkers">New Game (Checkers)</string>
    <string name="new_game_chess">New Game (Chess)</string>
    <string name="new_game_init">Play a New Game</string>
    <string name="new_game_ttt">New Game (Tic-Tac-Toe)</string>
    <string name="oValue">O</string>
    <string name="play_again">Play Again!</string>
    <string name="play_another_user">Play with Another User!</string>
    <string name="play_checkers">Play Checkers!</string>
    <string name="play_chess">Play Chess!</string>
    <string name="play_choose_game">Select a Game to Play!</string>
    <string name="play_computer">Play against the Computer!</string>
    <string name="play_locally">Play Locally with a Friend!</string>
    <string name="play_ttt">Play Tic-Tac-Toe!</string>
    <string name="playing">Playing…</string>
    <string name="playing_checkers">Playing Checkers!</string>
    <string name="playing_ttt">Playing Tic-Tac-Toe!</string>
    <string name="register">Register</string>
    <string name="register_button_text">Sign in to your account or register a new one to have fun with friends and family.</string>
    <string name="rooms">Rooms</string>
    <string name="select_sign_in_mode_text">Choose to sign in with a Google account or use a registered email address and password.</string>
    <string name="send">SEND</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_status_fmt">Account: %s</string>
    <string name="sign_in_title_text">Sign In</string>
    <string name="sign_out">Sign out</string>
    <string name="signed_out">Signed out</string>
    <string name="spaceValue" />
    <string name="switch_account">\u25bc Switch account</string>
    <string name="tbd">(tbd)</string>
    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>
    <string name="up_black_arrow">▲</string>
    <string name="winner_o">O Wins!</string>
    <string name="winner_tie">Tie!</string>
    <string name="winner_x">X Wins!</string>
    <string name="xValue">X</string>
</resources>
