<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2016 Pajato Technologies LLC.

This file is part of Pajato GameChat.

GameChat is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License
as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.

GameChat is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied
warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
details.

You should have received a copy of the GNU General Public License along with GameChat.  If not, see
http://www.gnu.org/licenses
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <TextView
        android:id="@+id/signIn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/sign_in"
        android:gravity="center"
        android:onClick="onClick"
        tools:visibility="gone" />

    <LinearLayout
        android:id="@+id/currentProfile"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="bottom"
        tools:visibility="visible">
        <ImageView
            android:id="@+id/currentAccountIcon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@android:drawable/sym_def_app_icon"
            tools:ignore="ContentDescription" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/currentAccountDisplayName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_header_label_android_studio"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
            <TextView
                android:id="@+id/currentAccountEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_header_label_android_studio_android_com" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/switchAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1.0"
            android:text="@string/switch_account"
            android:onClick="onClick"/>
        <TextView
            android:id="@+id/signOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/sign_out"
            android:onClick="onClick"/>
    </LinearLayout>

</LinearLayout>
